edit in some services